--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 # But first you must set up the virtual environment. Use at least python3.7
 # and do this in the Zeugs base folder:
 #     python3 -m venv venv
+#     venv/bin/pip install --upgrade pip
 
 pikepdf
 openpyxl
